<resources>
    <string name="app_name">GuessTheNumber</string>
    <string name="hintLabel">Hint:</string>
    <string name="hintValueText">Test</string>
    <string name="descriptionLabel">Try yo guess the number (0-1000)</string>
    <string name="guessNumberButton">Guess the Number!</string>
    <string name="newGameButton">Restart</string>
    <string name="guessNumberInput">Guess the Number</string>
    <string name="scoreLabel">Score</string>
    <string name="scoreValue">TextView</string>
    <string name="answerHint">TextView</string>
</resources>