<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/scoreLabel" />

            <TextView
                android:id="@+id/scoreValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scoreValue"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:text="0" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descriptionLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/guessNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/guessNumberInput"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/hintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hintLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintLabel" />

            <TextView
                android:id="@+id/hintValueText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hintValueText" />
        </LinearLayout>

        <Button
            android:id="@+id/guessNumberButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guessNumberButton" />

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newGameButton" />
    </LinearLayout>

    <TextView
        android:id="@+id/answerHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answerHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>